# recipe_website

./: .gitignore  README.md  TODO.md  pyproject.toml
recipe_website/: .env.deploy
recipe_website/recipe_website/: settings.py  urls.py
recipe_website/usersapp/: apps.py  forms.py  models.py  signals.py  views.py
recipe_website/usersapp/migrations/: 0001_initial.py  0002_alter_profile_image.py  0003_alter_profile_options_alter_profile_image.py
recipe_website/usersapp/templates/usersapp/: profile.html  register.html
recipe_website/usersapp/tests/: test_forms.py  test_models.py  test_views.py
recipe_website/webapp/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
recipe_website/webapp/migrations/: 0001_initial.py  0002_alter_recipe_image.py  0003_alter_recipe_image.py  0004_remove_recipe_user_recipe_author.py
recipe_website/webapp/templates/: base.html
recipe_website/webapp/templates/errors/: 500.html  error404.html
recipe_website/webapp/templates/webapp/: about.html  home.html  recipe_confirm_delete.html  recipe_detail.html  recipes_by_category.html  user_recipes.html
