[tool.poetry]
name = "recipe-website"
version = "0.1.0"
description = "The project “Recipe Website” on Django"
authors = ["igor_pont <pontigor11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
