[tool.poetry]
name = "recipe-website"
version = "0.1.0"
description = "The project “Recipe Website” on Django"
authors = ["igor_pont <pontigor11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
django-widget-tweaks = "^1.5.0"
django-bootstrap4 = "^23.2"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
django-appconf = "^1.0.6"
django-imagekit = "^4.0.2"
pilkit = "^3.0"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.23"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
